[project]
name = "claims-triage-agents"
version = "0.1.0"
description = "Multi-agent FNOL triage system built with LangGraph. Deliberate stack-closing exercise."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Leon Corbett", email = "lcorbett@protonmail.com" }]

dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
claims-triage = "claims_triage.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# agents.py contains long-form system prompt strings; splitting them is more
# trouble than the lint value
"src/claims_triage/agents.py" = ["E501"]

[[tool.mypy.overrides]]
module = ["langgraph.*", "langchain_anthropic.*", "langchain_core.*"]
ignore_missing_imports = true

# agents.py uses ChatAnthropic(model=...) and with_structured_output(include_raw=True).
# Both have imprecise upstream stubs (model arg flagged as unknown; the
# include_raw response is typed dict|BaseModel even though it's always a dict).
# Real bugs in this file still surface via other error codes.
[[tool.mypy.overrides]]
module = ["claims_triage.agents"]
disable_error_code = ["call-arg", "index"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = ["integration: tests that require ANTHROPIC_API_KEY"]
